--- a/Info.plist
+++ b/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleIdentifier</key>
-	<string>com.yourcompany.ImageKitDemo</string>
+	<string>com.Spotlight.MonoMacPoC</string>
 	<key>CFBundleName</key>
 	<string>ImageKitDemo</string>
 	<key>CFBundleVersion</key>
